Applied small layout fix
Announcements and Trending still overlapping in smaller browser windows

--- a/style.css
+++ b/style.css
@@ -39,6 +39,7 @@ body, html {
     grid-template-rows: repeat(5, 16vh);
     padding: 1rem;
     overflow: scroll;
+    column-gap: 2vw;
 }
 .content-projects {
     grid-column: 1 / 2;
@@ -125,6 +126,7 @@ body, html {
     align-items: stretch;
     background-color: white;
     box-shadow: 0 2px 5px rgba(0, 0, 0, 0.25);
+    padding-bottom: 1vh;
 }
 .header-searchbar {
     display: flex;
